# cursor-sdk-flight-recorder

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
assets/: README_ASSET_MANIFEST.md
examples/tiny_repo/: README.md  hello.py
examples/tiny_repo/tests/: test_hello.py
fixtures/: demo_trace.jsonl  live_sample_redacted.jsonl
scripts/: build_live_fixture.py  ci_smoke.py
src/: __init__.py  env_loader.py  gates.py  redact.py  report.py  runner.py  self_eval.py  trace.py  visuals.py
tests/: test_ci_smoke.py  test_gates.py  test_redact.py  test_report.py  test_self_eval.py  test_trace.py  test_upload.py
